--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/Code7R/icewm.git
 Package: icewm-common
 Architecture: any
 Conflicts: menu (<< 2.1.9-1)
-Replaces: icewm (<< 1.2.14), icewm-gnome-support (<< 1.3.9)
+Replaces: icewm (<< 1.2.14), icewm-gnome-support (<< 1.3.8-3)
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Recommends: menu, xscreensaver
 Description: wonderful Win95-OS/2-Motif-like window manager
@@ -26,6 +26,7 @@ Description: wonderful Win95-OS/2-Motif-like window manager
 Package: icewm
 Architecture: any
 Depends: icewm-common (= ${binary:Version}), ${shlibs:Depends}, fonts-dejavu-core | ttf-dejavu-core | custom-icewm-font, ${misc:Depends}
+Conflicts: icewm-common (<< 1.3.8-3)
 Provides: x-window-manager
 Description: wonderful Win95-OS/2-Motif-like window manager
  IceWm is a Window Manager for X Window System. It is fast and
