Deal with UNICODE_CONFIG_SET correctly

--- a/src/config.cmake.h.in
+++ b/src/config.cmake.h.in
@@ -109,7 +109,7 @@
 #cmakedefine CONFIG_UNICODE_SET
 #ifdef CONFIG_UNICODE_SET
 #undef CONFIG_UNICODE_SET
-#define CONFIG_UNICODE_SET @CONFIG_UNICODE_SET_VALUE@
+#define CONFIG_UNICODE_SET "@CONFIG_UNICODE_SET@"
 #endif
 
 #cmakedefine HAVE_XINTERNATOMS
