Use existing cmakedefine extra features instead of own hacks, fixed VERSION file reading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,16 @@ IF(NOT ICEHELPIDX)
 set(ICEHELPIDX "${DOCDIR}/icewm.html")
 ENDIF()
 
+FILE(READ "${CMAKE_SOURCE_DIR}/VERSION" vfilecontents)
+STRING(REGEX REPLACE "\n" ";" vfilecontents "${vfilecontents}")
+foreach (line ${vfilecontents})
+	STRING(REGEX REPLACE "=" ";" keyval "${line}")
+	list(GET keyval 0 _key)
+	IF(NOT DEFINED ${_key})
+		list(GET keyval 1 ${_key})
+	ENDIF()
+endforeach()
 
 add_subdirectory(src)
+add_subdirectory(po)
 #add_subdirectory(lib)
