--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 cmake_minimum_required(VERSION 2.6)
-set(CMAKE_LEGACY_CYGWIN_WIN32 0)
-
 PROJECT(ICEWM CXX C)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
@@ -9,27 +7,32 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src)
 include_directories(${PROJECT_SOURCE_DIR})
 
+IF(NOT DEFINED(PREFIX))
 set(PREFIX "/usr/local" CACHE STRING "Target file space")
+ENDIF()
 # iiieh, neeing to add some guards, since having this nested construct
 # interacts badly when changing a variable afterwards cmake also insists on
 # overwritting that variables later :-( if not protected
-IF(NOT DATADIR)
+IF(NOT DEFINED(DATADIR))
 set(DATADIR "${PREFIX}/share" CACHE STRING "Shared data files directory")
 ENDIF()
-IF(NOT LIBDIR)
+IF(NOT DEFINED(LIBDIR))
 set(LIBDIR "${DATADIR}/icewm")
 ENDIF()
-IF(NOT DOCDIR)
+IF(NOT DEFINED(DOCDIR))
 set(DOCDIR "${DATADIR}/doc/icewm")
 ENDIF()
-IF(NOT LOCDIR)
+IF(NOT DEFINED(LOCDIR))
 set(LOCDIR "${DATADIR}/locale")
 ENDIF()
-IF(NOT CFGDIR)
+IF(NOT DEFINED(CFGDIR))
 set(CFGDIR "${PREFIX}/etc/icewm")
 ENDIF()
-IF(NOT ICEHELPIDX)
+IF(NOT DEFINED(ICEHELPIDX))
 set(ICEHELPIDX "${DOCDIR}/icewm.html")
+ENDIF()
+IF(NOT DEFINED(BINDIR))
+set(BINDIR "${PREFIX}/bin")
 ENDIF()
 
 FILE(READ "${CMAKE_SOURCE_DIR}/VERSION" vfilecontents)
@@ -44,4 +47,4 @@ endforeach()
 
 add_subdirectory(src)
 add_subdirectory(po)
-#add_subdirectory(lib)
+add_subdirectory(lib)
