--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 2.6)
-set(CMAKE_LEGACY_CYGWIN_WIN32 0)
-
 PROJECT(ICEWM CXX)
 
-# not handy... :-(
-#INCLUDE(FindGettext) 
+# yes, FindGettext.cmake exists but it's not really handy :-(
+# XXX: document -DEXTRA_MSGMERGE=--verbose and -DEXTRA_MSGFMT=--verbose
 
+SET(EXTRA_MSGMERGE "--quiet")
+
+find_program(gettext gettext)
+find_program(xgettext xgettext)
+find_program(msgmerge msgmerge)
+find_program(msgfmt msgfmt)
+
+if(gettext AND xgettext AND msgmerge AND msgfmt)
 # source files, read-only!
 FILE(GLOB SRCS "${CMAKE_SOURCE_DIR}/src/*.cc")
 foreach(_src ${SRCS})
@@ -19,7 +25,8 @@ foreach(_src ${POS})
 	string(REPLACE ".po" "" _src ${_src})
 	LIST(APPEND LANGUAGES ${_src})
 endforeach()
-message("langs: ${LANGUAGES}")
+
+#message("langs: ${LANGUAGES}")
 SET(XGETTEXT_CMD xgettext -language=CXX --keyword=_ --keyword=N_  -s --package-name=${PACKAGE} --package-version=${VERSION})
 SET(_potFile "${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE}.pot")
 
@@ -30,13 +37,12 @@ ADD_CUSTOM_COMMAND(OUTPUT ${_potFile}
 	COMMENT "Extract translatable messages to ${_potFile}")
 ADD_CUSTOM_TARGET(update_pot DEPENDS ${_potFile})
 
-
 ADD_CUSTOM_TARGET(translations)
 
 foreach(_lang ${LANGUAGES})
 	SET(_tempPO "${CMAKE_CURRENT_BINARY_DIR}/${_lang}.po")
 	ADD_CUSTOM_COMMAND(OUTPUT ${_tempPO}
-	COMMAND msgmerge -o ${_tempPO} -v -s ${CMAKE_CURRENT_SOURCE_DIR}/${_lang}.po ${_potFile}
+     COMMAND msgmerge -o ${_tempPO} ${EXTRA_MSGMERGE} -s ${CMAKE_CURRENT_SOURCE_DIR}/${_lang}.po ${_potFile}
 	DEPENDS "${_potFile}"
 	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 	COMMENT "Updated: ${_tempPO}")
@@ -45,11 +51,15 @@ ADD_CUSTOM_TARGET(${_lang}.po DEPENDS ${_tempPO})
 	SET(_tempPO "${CMAKE_CURRENT_BINARY_DIR}/${_lang}.po")
 SET(_tempMO "${CMAKE_CURRENT_BINARY_DIR}/${_lang}.mo")
 ADD_CUSTOM_COMMAND(OUTPUT ${_tempMO}
-	COMMAND msgfmt -o ${_tempMO} -v ${_tempPO}
+   COMMAND msgfmt -o ${_tempMO} ${EXTRA_MSGFMT} ${_tempPO}
 	DEPENDS ${_tempPO}
-	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-	COMMENT "Compiled: ${_tempPO}")
-ADD_CUSTOM_TARGET(${_lang}.mo DEPENDS ${_tempMO})
-install(FILES ${_tempMO} DESTINATION ${LOCDIR}/${_lang}/LC_MESSAGES/)
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+#COMMENT "Compiled: ${_tempMO}")
+ADD_CUSTOM_TARGET(${_lang}.mo DEPENDS ${_tempMO} update_pot)
+install(FILES ${_tempMO} DESTINATION "${LOCDIR}/${_lang}/LC_MESSAGES/")
 add_dependencies(translations  ${_lang}.mo)
 endforeach()
+
+add_dependencies(icewm translations)
+
+endif()
