Added documentary installation

--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -20,10 +20,8 @@ foreach(_src ${SRCS})
 endforeach()
 FILE(GLOB POS "${CMAKE_CURRENT_SOURCE_DIR}/*.po")
 foreach(_src ${POS})
-	get_filename_component(_src "${_src}" NAME)
-	string(REPLACE ${PACKAGE} "" _src ${_src})
-	string(REPLACE ".po" "" _src ${_src})
-	LIST(APPEND LANGUAGES ${_src})
+   get_filename_component(_src "${_src}" NAME_WE)
+   LIST(APPEND LANGUAGES ${_src})
 endforeach()
 
 #message("langs: ${LANGUAGES}")
