--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -313,6 +313,7 @@ IF(CONFIG_FDO_MENUS)
 ADD_EXECUTABLE(icewm-menu-fdo${EXEEXT} fdomenu.cc)
 SET_TARGET_PROPERTIES(icewm-menu-fdo${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_COMMON} ${gio_CFLAGS}")
 TARGET_LINK_LIBRARIES(icewm-menu-fdo${EXEEXT} ${gio_LDFLAGS} ${EXTRA_LIBS})
+INSTALL(TARGETS icewm-menu-fdo${EXEEXT} DESTINATION ${BINDIR})
 ENDIF()
 
 ADD_EXECUTABLE(icewm-session${EXEEXT} icesm.cc yapp.cc misc.cc mstring.cc upath.cc ytimer.cc yprefs.cc)
@@ -346,7 +347,7 @@ SET_TARGET_PROPERTIES(icewmtray${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_CO
 TARGET_LINK_LIBRARIES(icewmtray${EXEEXT} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFLAGS} ${xrandr_LDFLAGS} ${pixbuf_LDFLAGS} ${xinerama_LDFLAGS} ${EXTRA_LIBS})
 
 
-INSTALL(TARGETS icewm-menu-fdo${EXEEXT} icewm-session${EXEEXT} icewmhint${EXEEXT} icewmbg${EXEEXT} icewmtray${EXEEXT} DESTINATION ${BINDIR})
+INSTALL(TARGETS icewm-session${EXEEXT} icewmhint${EXEEXT} icewmbg${EXEEXT} icewmtray${EXEEXT} DESTINATION ${BINDIR})
 
 #######################################
 # print information and some warnings #
@@ -358,7 +359,7 @@ foreach (_variableName
 		CONFIG_XPM
 		CONFIG_IMLIB 
 		CONFIG_GDK_PIXBUF_XLIB
-		CONFIG_TOOLTIP CONFIG_WINLIST CONFIG_TASKBAR CONFIG_TASKBAR 
+		CONFIG_TOOLTIP CONFIG_WINLIST CONFIG_TASKBAR
 		CONFIG_ADDRESSBAR CONFIG_TRAY 
 		CONFIG_APPLET_MAILBOX 
 		CONFIG_APPLET_CPU_STATUS CONFIG_APPLET_NET_STATUS 
