--- a/debian/rules
+++ b/debian/rules
@@ -91,9 +91,8 @@ install: build
 	install -m 644 $(ICONS)/{mutt,mozilla,icewm}*.xpm $(ICEWM_COMMON)/usr/share/icewm/icons
 	-mv $(ICEWM_COMMON)/usr/share/icewm/taskbar/icewm.xpm  $(ICEWM_COMMON)/usr/share/icewm/taskbar/icewm.orig.xpm
 	install -m 644 $(ICONS)/debian.xpm $(ICEWM_COMMON)/usr/share/icewm/taskbar/icewm.xpm
-	mkdir -p $(ICEWM_COMMON)/etc/X11/icewm $(ICEWM_COMMON)/usr/bin
-	#mkdir -p $(ICEWM_COMMON)/etc/X11/icewm $(ICEWM_COMMON)/usr/bin $(ICEWM_COMMON)/usr/share/doc/icewm-common/html/
-	install -m 644 $(CUSTOM)/toolbar $(CUSTOM)/menu $(ICEWM_COMMON)/etc/X11/icewm/
+	mkdir -p $(ICEWM_COMMON)/usr/bin
+	install -m 644 $(CUSTOM)/toolbar $(CUSTOM)/menu  $(ICEWM_COMMON)/usr/share/icewm
 	$(BDIR)-normal/genpref > $(ICEWM_COMMON)/usr/share/icewm/preferences
 	# Move files in the right package directory
 	mv $(ICEWM)/usr/bin/*gnome* $(ICEWM_COMMON)/usr/share/icewm/
@@ -165,7 +164,10 @@ cleancruft:
 	git checkout HEAD -- README.md configure.ac ChangeLog
 
 get-orig-source:
-	git archive icewm-1-3-BRANCH --prefix icewm-$(ORIGVERSION)/ | xz -9 > ../icewm_$(ORIGVERSION).orig.tar.xz
+	lc=`git reflog icewm-1-3-BRANCH | head -n1 | cut -f1 -d" "` && echo $(ORIGVERSION) | grep $$lc
+	git tag upstream/$(ORIGVERSION) icewm-1-3-BRANCH
+	git archive upstream/$(ORIGVERSION) --prefix icewm-$(ORIGVERSION)/ | xz -9 > ../icewm_$(ORIGVERSION).orig.tar.xz
+	test -d ../tarballs && ln icewm_$(ORIGVERSION).orig.tar.xz ../tarballs || true
 
 update-debian-mod:
 	grep debian .git/HEAD
