--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: icewm
 Section: x11
 Priority: optional
 Maintainer: Eduard Bloch <blade@debian.org>
-Build-Depends: debhelper (>= 9), libgdk-pixbuf2.0-dev, libxrender-dev, gettext, xfonts-utils, libxft-dev (>> 2.1.1) | libxft2-dev, libesd0-dev, libsm-dev, libx11-dev, libxext-dev, libxft-dev, libxinerama-dev, libxrandr-dev, x11proto-core-dev | x-dev, linuxdoc-tools, dpkg-dev (>= 1.16.1~), cmake (>= 2.8.6)
+Build-Depends: debhelper (>= 9), libgdk-pixbuf2.0-dev, libxrender-dev, gettext, xfonts-utils, libxft-dev (>> 2.1.1) | libxft2-dev, libesd0-dev, libsm-dev, libx11-dev, libxext-dev, libxft-dev, libxinerama-dev, libxrandr-dev, x11proto-core-dev | x-dev, linuxdoc-tools, dpkg-dev (>= 1.16.1~), cmake
 Build-Conflicts: libttf-dev
 Standards-Version: 3.9.6
 Vcs-Git: https://github.com/Code7R/icewm.git
