--- a/debian/rules
+++ b/debian/rules
@@ -91,8 +91,9 @@ install: build
 	install -m 644 $(ICONS)/{mutt,mozilla,icewm}*.xpm $(ICEWM_COMMON)/usr/share/icewm/icons
 	-mv $(ICEWM_COMMON)/usr/share/icewm/taskbar/icewm.xpm  $(ICEWM_COMMON)/usr/share/icewm/taskbar/icewm.orig.xpm
 	install -m 644 $(ICONS)/debian.xpm $(ICEWM_COMMON)/usr/share/icewm/taskbar/icewm.xpm
-	mkdir -p $(ICEWM_COMMON)/usr/bin
-	install -m 644 $(CUSTOM)/toolbar $(CUSTOM)/menu  $(ICEWM_COMMON)/usr/share/icewm
+	mkdir -p $(ICEWM_COMMON)/usr/bin $(ICEWM_COMMON)/etc/X11/icewm
+	install -m 644 $(CUSTOM)/toolbar $(CUSTOM)/menu $(ICEWM_COMMON)/usr/share/icewm
+	install -m 644 debian/README.cfg $(ICEWM_COMMON)/usr/share/icewm/README
 	$(BDIR)-normal/genpref > $(ICEWM_COMMON)/usr/share/icewm/preferences
 	# Move files in the right package directory
 	mv $(ICEWM)/usr/bin/*gnome* $(ICEWM_COMMON)/usr/share/icewm/
@@ -166,7 +167,9 @@ cleancruft:
 	git clean -fdx -e .cproject -e .project -e .settings
 	git checkout HEAD -- README.md configure.ac ChangeLog
 
+# builds a snapshot of the upstream branch after some plausibility checks
 get-orig-source:
+	! test -e ../icewm_$(ORIGVERSION).orig.tar.xz || (echo Target already exists ; exit 1)
 	lc=`git reflog icewm-1-3-BRANCH | head -n1 | cut -f1 -d" "` && echo "Expected upstream ref: $$lc" && echo $(ORIGVERSION) | grep $$lc
 	git tag upstream/$(ORIGVERSION) icewm-1-3-BRANCH
 	git archive upstream/$(ORIGVERSION) --prefix icewm-$(ORIGVERSION)/ | xz -9 > ../icewm_$(ORIGVERSION).orig.tar.xz
