--- a/debian/rules
+++ b/debian/rules
@@ -167,6 +167,9 @@ cleancruft:
 	git clean -fdx -e .cproject -e .project -e .settings
 	git checkout HEAD -- README.md configure.ac configure.in ChangeLog
 
+set-orig-snapshot:
+	lc=$$(git reflog icewm-1-3-BRANCH | head -n1 | cut -f1 -d" ") && dd=$$(date +\%Y\%m\%d) && ov=$$(dpkg-parsechangelog -S Version) && pfx=$$(echo $$ov | sed -e 's,mod.*,mod+,') && echo $$lc $$dd $$ov $$pfx && dch --newversion $$pfx+$$dd+$$lc-1
+
 # builds a snapshot of the upstream branch after some plausibility checks
 get-orig-source:
 	! test -e ../icewm_$(ORIGVERSION).orig.tar.xz || (echo Target already exists ; exit 1)
