--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,4 +1,4 @@
 [DEFAULT]
-debian-branch = debian/wheezy-backports-sloppy
+debian-branch = debian/jessie-backports
 upstream-branch = icewm-1-3-BRANCH
 
