--- a/debian/README.cfg
+++ b/debian/README.cfg
@@ -6,11 +6,14 @@ files shipped with the icewm package. The original files were and are located
 in /usr/share/icewm/ directory. This was considered service to the users but
 it has also led to confusion and made package handling more complicated.
 
-Therefore, the default configuration files are now only located in
-/usr/share/icewm/ directory. To customize something for all system users, the
-system administrator shall copy the particular file to /etc/X11/icewm when
-needed, and icewm will automatically make use of that copy. Regular users can
-do the same, installing their version into ~/.icewm/.
+Therefore, most default configuration files are now only located in
+/usr/share/icewm/ directory. The preferences file with default settings
+examples is /usr/share/icewm/preferences.gz .
+
+To customize something for all system users, the system administrator shall
+copy the particular file to /etc/X11/icewm when needed, and icewm will
+automatically make use of that copy. Regular users can do the same, installing
+their version into ~/.icewm/.
 
 Note: for some settings, it's also possible to combine the default and
 customized configuration, i.e. with "include" statements or the special
