--- a/debian/rules
+++ b/debian/rules
@@ -121,7 +121,5 @@ get-orig-source:
 
 update-debian-mod:
 	grep debian .git/HEAD
-	DEVBRANCH=icewm-1-3-BRANCH NOAC=1 sh autogen.sh
+	git log icewm-1-3-BRANCH   -n 200 --abbrev-commit --decorate --stat=76 -M -C|fmt -sct -w80 > ChangeLog
 	git commit ChangeLog -m "Updating ChangeLog for a new Debian snapshot"
-	# don't care
-	git checkout HEAD -- README.md configure.ac
